# CLI-based-MTFS

./: CMakeLists.txt  README.md  a.out  app  app.sh  client.cpp  common.cpp  common.h  main.cpp  server.cpp
